parser/sample_tests/ours/expressions.txt

*** Error line 3.
int foo(int a, double b, bool c) {
       ^
*** syntax error

